<resources>
    <string name="share_faile">分享失败</string>
    <string name="share_1">朋友圈多图</string>
    <string name="share_2">二维码分享</string>
    <string name="share_3">微信</string>
    <string name="share_4">朋友圈</string>
    <string name="share_5">QQ</string>
    <string name="share_6">QQ空间</string>
    <string name="share_7">新浪微博</string>
    <string name="share_8">短信</string>
    <string name="share_9">复制链接</string>
    <string name="share_10">刷新</string>
    <string name="share_11">取消分享</string>
    <string name="share_12">图片生成中...</string>
    <string name="mobile_note">手机短信</string>
    <string name="cancel">取消</string>
    <string name="text_copy_to__cilpboard">内容已复制到剪切板</string>
</resources>
