<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--用来设置点击分享界面以外让弹窗消失的-->
    <View
        android:id="@+id/v_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#66000000" />

    <!--外面套一层是为了设置整体为白色-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/popupwindow_photo_share_push_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/distance_8"
            android:paddingTop="@dimen/distance_8"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_8"
                android:text="你还不是推客哦~~"
                android:textColor="@color/text_med_grey"
                android:textSize="@dimen/font_18" />

            <TextView
                android:id="@+id/popupwindow_photo_share_apply_for"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/distance_5"
                android:layout_marginTop="@dimen/distance_10"
                android:background="@drawable/circular_is_lyf"
                android:gravity="center"
                android:paddingBottom="@dimen/distance_10"
                android:paddingTop="@dimen/distance_10"
                android:text="立即申请"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="分享到"
            android:textColor="@color/sub_title_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_distribution_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#ff4444"
            android:textSize="12sp"
            tools:text="afadfadfadfadfafasdfasasdfasdf" />

        <TextView
            android:id="@+id/popupwindow_photo_share_create_poster"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/distance_5"
            android:layout_marginTop="@dimen/distance_10"
            android:background="@drawable/circular_is_lyf"
            android:gravity="center"
            android:paddingBottom="@dimen/distance_10"
            android:paddingTop="@dimen/distance_10"
            android:text="生成商品推广海报"
            android:textColor="@color/white"
            android:visibility="gone" />

        <!--朋友圈多图分享-->
        <LinearLayout
            android:id="@+id/ll_whole_multi_photos_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_multi_photos_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/share_morepics" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/share_1"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/share_2"
                android:textColor="@color/share_text_9"
                android:textSize="@dimen/text_size_15sp" />
        </LinearLayout>

        <!--分割线-->
        <View
            android:id="@+id/v_divide_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/color_divide_line"
            android:visibility="gone" />

        <!--各种分享图标  第一行-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/ll_logo5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_weibo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/share_7"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_logo2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <!--图标和文字-->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_friend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/share_4"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />

            </LinearLayout>

            <!--logo3-->
            <LinearLayout
                android:id="@+id/ll_logo1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/share_3"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />
            </LinearLayout>

            <!--logo4-->
            <LinearLayout
                android:id="@+id/ll_logo3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/share_5"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />
            </LinearLayout>
            <!--logo5-->
            <LinearLayout
                android:id="@+id/ll_logo4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_qzone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/share_6"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />
            </LinearLayout>
        </LinearLayout>

        <!--各种分享图标  第二行-->

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/color_divide_line"
            android:visibility="gone" />

        <!--取消分享-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <!--logo1-->
            <LinearLayout
                android:id="@+id/ll_logo6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/mobile_note"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />
            </LinearLayout>

            <!--logo2-->
            <LinearLayout
                android:id="@+id/ll_logo7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_links" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/share_9"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />

            </LinearLayout>

            <!--logo3-->
            <LinearLayout
                android:id="@+id/ll_logo8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_refresh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/share_10"
                    android:textColor="@color/share_text_3"
                    android:textSize="@dimen/text_size_11sp" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/line_match_parent" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/share_text_6"
            android:textSize="@dimen/text_size_18sp" />
    </LinearLayout>
</LinearLayout>
